# sakuga-scraper

./: .gitignore  README.md  enumerate_jsons.py  pyproject.toml  run_scraper.py
notebooks/: postproc_data.ipynb  test_endpoints.ipynb  test_scraper.ipynb  test_scraping.ipynb  test_scrpaer.ipynb
sakuga_scraper/: __init__.py  scraper.py
