[tool.poetry]
name = "sakuga-scraper"
version = "0.1.0"
description = "Scraper for the site sakuga booru"
authors = ["yada <trojblue@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
