[tool.poetry]
name = "sakuga_scraper"
version = "0.1.0"
description = "Scraper for the site sakuga booru"
authors = ["yada <trojblue@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
beautifulsoup4 = "^4.12.3"
tenacity = "^9.0.0"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"
pip = "^24.3.1"
unibox = "^0.4.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
